# rgen

./: BUILDING.md  Cargo.toml  README.md
src/: args.rs  main.rs
