[package]
name = "rgen-cli"
version = "0.1.0"
edition = "2021"
description = "Generate cryptographically secure strings, numbers and more right from your terminal."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rgen"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.7", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
